--- a/BicycleMarketplace/market/package.json
+++ b/BicycleMarketplace/market/package.json
@@ -15,7 +15,7 @@
         "@angular/animations": "^4.0.0",
         "@angular/common": "^4.0.0",
         "@angular/compiler": "^4.0.0",
-        "@angular/core": "^4.4.6",
+        "@angular/core": "^4.0.0",
         "@angular/forms": "^4.0.0",
         "@angular/http": "^4.0.0",
         "@angular/platform-browser": "^4.0.0",
@@ -26,8 +26,10 @@
         "core-js": "^2.4.1",
         "ng2-file-input": "^1.0.2",
         "ng2-file-upload": "^1.2.1",
+        "ng2-search-filter": "^0.3.1",
         "ngx-cookie": "^1.0.0",
         "rxjs": "^5.4.1",
+        "typings": "^2.1.1",
         "zone.js": "^0.8.14"
     },
     "devDependencies": {
