--- a/BicycleMarketplace/package.json
+++ b/BicycleMarketplace/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "aws-sdk": "^2.141.0",
         "bcrypt-as-promised": "^1.1.0",
         "body-parser": "^1.15.0",
         "cookie-parser": "^1.4.3",
@@ -18,6 +19,7 @@
         "mongoose": "^4.11.4",
         "mongoose-unique-validator": "^1.0.5",
         "multer": "^1.3.0",
+        "multer-s3": "^2.7.0",
         "ngx-cookie": "^1.0.0",
         "socket.io": "^2.0.3",
         "validator": "^8.1.0"
