--- a/BicycleMarketplace/package.json
+++ b/BicycleMarketplace/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "aws-sdk": "^2.141.0",
+        "bcrypt": "^1.0.3",
         "bcrypt-as-promised": "^1.1.0",
         "body-parser": "^1.15.0",
         "cookie-parser": "^1.4.3",
@@ -25,6 +26,6 @@
         "validator": "^8.1.0"
     },
     "devDependencies": {
-        "@angular/cli": "^1.4.9"
+        "@angular/cli": "^1.5.3"
     }
 }
